# ROB550-Botlab

./: README.md
mbot_autonomy/: CMakeLists.txt  checkpoint2.log.jlp
mbot_autonomy/include/planning/: astar.hpp  exploration.hpp  frontiers.hpp  motion_planner.hpp
mbot_autonomy/include/slam/: action_model.hpp  mapping.hpp  particle_filter.hpp  sensor_model.hpp
mbot_autonomy/include/utils/geometric/: angle_functions.hpp
mbot_autonomy/src/mbot/: checkpoint_1.cpp  diff_motion_controller.cpp  drive_square.cpp  event_1.cpp
mbot_autonomy/src/planning/: astar.cpp  astar_test.cpp  exploration.cpp  frontiers.cpp  motion_planner.cpp  motion_planner_server.cpp  obstacle_distance_grid_test.cpp
mbot_autonomy/src/slam/: action_model.cpp  mapping.cpp  particle_filter.cpp  sensor_model.cpp  slam.cpp  slam_main.cpp
mbot_firmware/comms/include/comms/: mbot_channels.h
mbot_firmware/mbot/: CMakeLists.txt
mbot_firmware/mbot/include/mbot/defs/: mbot_params.h
mbot_firmware/mbot/src/servo/: servo.c
mbot_firmware/src/: mbot.c  mbot.h  odometry.c
mbot_firmware/tests/: mbot_calibrate_classic.c
